Fixed(kinda) death menu

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -158,11 +158,9 @@ ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 LastLevel=/Game/2DSideScrollerBP/Maps/StartMenu
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Explosion.Explosion
+CleanShutdown=False
 OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/StartMenu.StartMenu
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1092,8 +1090,8 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem2=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem2=/Game/2DSideScrollerBP/Maps/DeathScreen
 MRUItem3=/Game/2DSideScrollerBP/Maps/FullLevel
 MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial2
 MRUItem5=/Game/2DSideScrollerBP/Maps/Tutorial4
@@ -1104,21 +1102,21 @@ MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem2=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
 MRUItem3=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/Explosion
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem6=/Game/2DSideScroller/Textures/Explosion1
-MRUItem7=/Game/2DSideScroller/Textures/Explosion
-MRUItem8=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/Bullet
-MRUItem14=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
-MRUItem15=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem4=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/Explosion
+MRUItem7=/Game/2DSideScroller/Textures/Explosion1
+MRUItem8=/Game/2DSideScroller/Textures/Explosion
+MRUItem9=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/Bullet
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
 MRUItem16=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
 MRUItem17=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
 MRUItem18=/Game/2DSideScrollerBP/Maps/FullLevel_Map
@@ -2016,6 +2014,18 @@ DeathScreen_C.Tick=True
 DeathScreen_C.Replication=True
 DeathScreen_C.Actor=True
 DeathScreen_C.Input=True
+DeathMenu_C.Appearance=True
+DeathMenu_C.Designer=True
+DeathMenu_C.Input=True
+DeathMenu_C.Interaction=True
+DeathMenu_C.Performance=True
+DeathMenu_C.Layout=True
+DeathMenu_C.Behavior=True
+DeathMenu_C.Render Transform=True
+DeathMenu_C.Accessibility=True
+DeathMenu_C.Clipping=True
+DeathMenu_C.Navigation=True
+DeathMenu_C.Localization=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2217,7 +2227,7 @@ PreserveScaleRatio=False
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent="\"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object.Tags.ComponentTags\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PaperSpriteComponent=
 MeshComponent="\"Object.Tags.ComponentTags\" "
@@ -2230,8 +2240,8 @@ ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.Velocity.Velocity\" "
 EnemyBoundaries_C="\"Object.Actor.Tags\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CharacterMovementComponent="\"Object.Velocity.Velocity\" "
 PawnMovementComponent="\"Object.Velocity.Velocity\" "
 NavMovementComponent="\"Object.Velocity.Velocity\" "
@@ -2274,6 +2284,8 @@ ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+DeathMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
