--- a/GameDesign2/Saved/Config/Windows/Engine.ini
+++ b/GameDesign2/Saved/Config/Windows/Engine.ini
@@ -58,3 +58,11 @@ Paths=../../../Engine/Plugins/Enterprise/DatasmithContent/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=True
+ToggleKeysHotkey=True
+FilterKeysHotkey=True
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
