--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=320,Y=160)
+NewWindowPosition=(X=-8,Y=-8)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,14 +93,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=1920,Y=1016)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=320,Y=160)
+MultipleInstancePositions=(X=-8,Y=-8)
+NewWindowWidth=1920
+NewWindowHeight=1016
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -147,7 +149,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Data
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -157,7 +159,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1268,26 +1270,26 @@ SS_Game_C.Clipping=True
 SS_Game_C.Localization=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Data/SS_Game
-MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem2=/Game/Data/Jack_s_Christmas_Run_TITLE_LOGO
-MRUItem3=/Game/Data/Jack_s_Christmas_Run_START
-MRUItem4=/Game/Data/Jack_s_Christmas_Run_OPTIONS
-MRUItem5=/Game/Data/Jack_s_Christmas_Run_BACKGROUND
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem7=/Game/Data/AnimationState
-MRUItem8=/Game/2DSideScrollerBP/Sprites/Level1TileMap
-MRUItem9=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
-MRUItem10=/Game/2DSideScrollerBP/Sprites/Tileset
-MRUItem11=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
-MRUItem12=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem13=/Game/2DSideScrollerBP/Animations/PC_Run
-MRUItem14=/Game/2DSideScrollerBP/Animations/PC_Projectile
-MRUItem15=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
-MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Jump
-MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Idle
-MRUItem18=/Game/2DSideScrollerBP/Animations/PC_Hurt
-MRUItem19=/Game/2DSideScroller/Sprites/RunningAnimation
+MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem1=/Game/Data/SS_Game
+MRUItem2=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem3=/Game/2DSideScrollerBP/Maps/Level_01
+MRUItem4=/Game/2DSideScrollerBP/Maps/_4_Rodriguez_Tileset__1_
+MRUItem5=/Game/Data/Jack_s_Christmas_Run_TITLE_LOGO
+MRUItem6=/Game/Data/Jack_s_Christmas_Run_START
+MRUItem7=/Game/Data/Jack_s_Christmas_Run_OPTIONS
+MRUItem8=/Game/Data/Jack_s_Christmas_Run_BACKGROUND
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem10=/Game/Data/AnimationState
+MRUItem11=/Game/2DSideScrollerBP/Sprites/Level1TileMap
+MRUItem12=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
+MRUItem13=/Game/2DSideScrollerBP/Sprites/Tileset
+MRUItem14=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
+MRUItem15=/Game/2DSideScrollerBP/Animations/PC_Shoot
+MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Projectile
+MRUItem18=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
+MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Jump
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1305,6 +1307,7 @@ MRUItem19=/Game/2DSideScroller/Sprites/RunningAnimation
 /Game/Data/AnimationState.AnimationState=1
 /Game/Data/SS_Game.SS_Game=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
+/Game/2DSideScrollerBP/Maps/_4_Rodriguez_Tileset__1_._4_Rodriguez_Tileset__1_=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1344,6 +1347,8 @@ NodeTemplateCacheCapMB=20.000000
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level_1
+MRUItem2=/Game/2DSideScrollerBP/Maps/Level_01
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScrollerBP/Sprites/Level1TileMap.Level1TileMap;
