Fixed jack's deletion

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -145,7 +145,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
@@ -159,7 +159,7 @@ CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=243.200 Y=91.200
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1371,23 +1371,23 @@ Blueprint.Packaging=True
 Blueprint.Thumbnail=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/B_Parent_Pickup
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem3=/Game/2DSideScrollerBP/Sprites/NewBlueprint
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/NewBlueprint
-MRUItem5=/Game/Data/AnimationState
-MRUItem6=/Game/PickupItem_Interface
-MRUItem7=/Game/Jack_s_Christmas_Run_Background
-MRUItem8=/Game/W_Inventory
-MRUItem9=/Game/W_PickupItem
-MRUItem10=/Game/NewWidgetBlueprint
-MRUItem11=/Game/2DSideScrollerBP/Sprites/Level1TileMap
-MRUItem12=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
-MRUItem13=/Game/2DSideScrollerBP/Sprites/Tileset
-MRUItem14=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
-MRUItem15=/Game/2DSideScrollerBP/Animations/PC_Shoot
-MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem0=/Game/2DSideScrollerBP/Animations/PC_Run
+MRUItem1=/Game/B_Parent_Pickup
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem4=/Game/2DSideScrollerBP/Sprites/NewBlueprint
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/NewBlueprint
+MRUItem6=/Game/Data/AnimationState
+MRUItem7=/Game/PickupItem_Interface
+MRUItem8=/Game/Jack_s_Christmas_Run_Background
+MRUItem9=/Game/W_Inventory
+MRUItem10=/Game/W_PickupItem
+MRUItem11=/Game/NewWidgetBlueprint
+MRUItem12=/Game/2DSideScrollerBP/Sprites/Level1TileMap
+MRUItem13=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1_
+MRUItem14=/Game/2DSideScrollerBP/Sprites/Tileset
+MRUItem15=/Game/2DSideScrollerBP/Sprites/_4_Rodriguez_Tileset__1__TileSet
+MRUItem16=/Game/2DSideScrollerBP/Animations/PC_Shoot
 MRUItem17=/Game/2DSideScrollerBP/Animations/PC_Projectile
 MRUItem18=/Game/2DSideScrollerBP/Animations/PC_JumpShoot
 MRUItem19=/Game/2DSideScrollerBP/Animations/PC_Jump
@@ -1491,7 +1491,7 @@ UserWidget=
 InstalledPlugins=XRVisualization
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=LoadErrors
 
 [DetailCustomWidgetExpansion]
 K2Node_FunctionEntry=
