--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -153,10 +153,11 @@ ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/SS_game
+LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1565,15 +1566,15 @@ MapBuildDataRegistry.Lighting=True
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Textures/1StartScreen
-MRUItem1=/Game/2DSideScrollerBP/Maps/SS_game
-MRUItem2=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem3=/Game/StarterContent/Maps/SS_game
-MRUItem4=/Game/2DSideScroller/Textures/ZStart_Screen
-MRUItem5=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
-MRUItem6=/Game/2DSideScroller/Sprites/Level1_TileMap1
-MRUItem7=/Game/2DSideScroller/Sprites/Level1_TileMap
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScroller/Textures/1StartScreen
+MRUItem2=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
+MRUItem3=/Game/2DSideScrollerBP/Maps/SS_game
+MRUItem4=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem5=/Game/StarterContent/Maps/SS_game
+MRUItem6=/Game/2DSideScroller/Textures/ZStart_Screen
+MRUItem7=/Game/2DSideScroller/Sprites/Level1_TileMap1
+MRUItem8=/Game/2DSideScroller/Sprites/Level1_TileMap
 MRUItem9=/Game/2DSideScroller/Data/AnimationState
 MRUItem10=/Game/2DSideScroller/Sprites/Background_Sprite
 MRUItem11=/Game/2DSideScroller/Sprites/Level1_TileSet
@@ -1612,7 +1613,7 @@ LastLogListing=LoadErrors
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object=
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
