--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -166,13 +166,14 @@ LastLevel=/Game/2DSideScrollerBP/Maps/SS_Game
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game
+OpenAssetsAtExit=/Game/HUD/OptionsMenuWidget.OptionsMenuWidget
+OpenAssetsAtExit=/Game/HUD/PauseMenuWidget.PauseMenuWidget
 OpenAssetsAtExit=/Game/HUD/StartScreen_Game.StartScreen_Game
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
-ScreenPosition=X=14.000 Y=9.000
-WindowSize=X=956.000 Y=723.000
+ScreenPosition=X=670.000 Y=199.000
+WindowSize=X=956.000 Y=722.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1063,26 +1064,26 @@ MRUItem0=/Game/2DSideScrollerBP/Maps/SS_Game
 MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/HUD/StartScreen_Game
-MRUItem1=/Game/2DSideScrollerBP/Maps/SS_Game
-MRUItem2=/Game/2DSideScroller/Textures/Shift_Mat
-MRUItem3=/Game/2DSideScroller/Textures/Shift_Mat1
-MRUItem4=/Game/2DSideScroller/Textures/Shift
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem0=/Game/2DSideScrollerBP/Maps/SS_Game
+MRUItem1=/Game/HUD/Quit
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem4=/Game/HUD/StartScreen_Game
+MRUItem5=/Game/HUD/PauseMenuWidget
 MRUItem6=/Game/HUD/OptionsMenuWidget
-MRUItem7=/Game/HUD/PauseMenuWidget
-MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem9=/Game/HUD/Start
-MRUItem10=/Game/HUD/Logo
-MRUItem11=/Game/BP/BP_Coins
-MRUItem12=/Game/HUD/MainUI
-MRUItem13=/Game/2DSideScroller/Textures/Level1_Tilemap
-MRUItem14=/Game/2DSideScroller/Sprites/Coin
-MRUItem15=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem16=/Game/2DSideScroller/Data/AnimationState
-MRUItem17=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem18=/Game/2DSideScroller/Textures/camelpyramid
-MRUItem19=/Game/2DSideScroller/Sprites/NewMaterial
+MRUItem7=/Game/2DSideScroller/Textures/Shift_Mat
+MRUItem8=/Game/2DSideScroller/Textures/Shift_Mat1
+MRUItem9=/Game/2DSideScroller/Textures/Shift
+MRUItem10=/Game/HUD/Start
+MRUItem11=/Game/HUD/Logo
+MRUItem12=/Game/BP/BP_Coins
+MRUItem13=/Game/HUD/MainUI
+MRUItem14=/Game/2DSideScroller/Textures/Level1_Tilemap
+MRUItem15=/Game/2DSideScroller/Sprites/Coin
+MRUItem16=/Game/2DSideScroller/Animations/PC_Projectile
+MRUItem17=/Game/2DSideScroller/Data/AnimationState
+MRUItem18=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem19=/Game/2DSideScroller/Textures/camelpyramid
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2090,18 +2091,19 @@ Text3DComponent.Cooking=True
 /Game/BP/BP_Coins.BP_Coins=0
 /Game/HUD/Background.Background=1
 /Game/HUD/Logo.Logo=1
-/Game/HUD/Options.Options=1
-/Game/HUD/Start.Start=1
+/Game/HUD/Options.Options=0
+/Game/HUD/Start.Start=0
 /Game/2DSideScrollerBP/Maps/SS_Game.SS_Game:PersistentLevel.SS_Game=0
 /Game/HUD/StartScreen_Game.StartScreen_Game=0
 /Game/2DSideScroller/Textures/Shift.Shift=0
+/Game/HUD/Quit.Quit=0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object=
+Object="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2113,8 +2115,8 @@ Pawn=
 PaperTileMap="\"Object.Sprite.TileLayers.TileLayers[0]\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Render Transform.RenderTransform\" "
@@ -2126,13 +2128,14 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 StartScreen_Game_C="\"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" "
-PauseMenuWidget_C="\"Object.Render Transform.RenderTransform\" "
+PauseMenuWidget_C=
 OptionsMenuWidget_C="\"Object.Render Transform.RenderTransform\" "
 CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
 ActorComponent=
+BackgroundBlur="\"Object.Render Transform.RenderTransform\" "
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
@@ -2146,6 +2149,8 @@ BlueprintEditorProjectSettings=True
 InputSettings=True
 EditorStyleSettings=True
 LevelEditorViewportSettings=True
+GameMapsSettings=True
+UserInterfaceSettings=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2458,4 +2463,13 @@ LastLogListing=PIE
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
 Property=0.500000
 Value=1.000000
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
+
+[PropertyWindowExpansion]
+Texture2D=
+Texture=
+StreamableRenderAsset=
+Object=
 
