--- a/GameDesign2/Config/DefaultEngine.ini
+++ b/GameDesign2/Config/DefaultEngine.ini
@@ -5,12 +5,12 @@ GameName=GameDesign2
 r.MobileHDR=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+EditorStartupMap=/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+GameDefaultMap=/Game/2DSideScrollerBP/Maps/SS_Game.SS_Game
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 
