--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -159,8 +159,7 @@ LastLevel=/Game/2DSideScrollerBP/Maps/StartMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/TileSet/Abduction_Tileset_TileSet.Abduction_Tileset_TileSet
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1102,25 +1101,25 @@ MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem3=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem4=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/Explosion
-MRUItem7=/Game/2DSideScroller/Textures/Explosion1
-MRUItem8=/Game/2DSideScroller/Textures/Explosion
-MRUItem9=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem13=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem14=/Game/2DSideScrollerBP/Blueprints/Bullet
-MRUItem15=/Game/2DSideScrollerBP/Blueprints/Tutorial_1_TP
-MRUItem16=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem18=/Game/2DSideScrollerBP/Maps/FullLevel_Map
-MRUItem19=/Game/2DSideScroller/Animations/Enemy_Hurt
+MRUItem1=/Game/2DSideScroller/Textures/TileSet/Abduction_Tileset_TileSet
+MRUItem2=/Game/2DSideScroller/Textures/Tutorial1_Ruins
+MRUItem3=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/DeathPlane
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/Background
+MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem7=/Game/2DSideScrollerBP/Maps/Level1_Map
+MRUItem8=/Game/2DSideScroller/Textures/Level1_TileSet_Ruins
+MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial1_Ruins
+MRUItem10=/Game/2DSideScrollerBP/Maps/Level1_TileMap
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem12=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem13=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem14=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem15=/Game/2DSideScrollerBP/Blueprints/Explosion
+MRUItem16=/Game/2DSideScroller/Textures/Explosion1
+MRUItem17=/Game/2DSideScroller/Textures/Explosion
+MRUItem18=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem19=/Game/2DSideScrollerBP/Maps/Tutorial2
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2026,6 +2025,22 @@ DeathMenu_C.Accessibility=True
 DeathMenu_C.Clipping=True
 DeathMenu_C.Navigation=True
 DeathMenu_C.Localization=True
+Background_C.Tick=True
+Background_C.Replication=True
+Background_C.Rendering=True
+Background_C.Collision=True
+Background_C.Actor=True
+Background_C.Input=True
+Background_C.TransformCommon=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2076,6 +2091,10 @@ DeathMenu_C.Localization=True
 /Game/2DSideScrollerBP/Blueprints/BulletEnemy.BulletEnemy=1
 /Game/2DSideScroller/Textures/MenuTextures/StartMenu.StartMenu=1
 /Game/2DSideScrollerBP/Maps/StartMenu.StartMenu:PersistentLevel.StartMenu=1
+/Game/2DSideScroller/Textures/TileSet/Abduction_Tileset_TileSet.Abduction_Tileset_TileSet=1
+/Game/2DSideScrollerBP/Maps/Tutorial1_Ruins.Tutorial1_Ruins=1
+/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map=1
+/Game/2DSideScrollerBP/Blueprints/Background.Background=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2225,13 +2244,13 @@ PreserveScaleRatio=False
 
 [DetailPropertyExpansion]
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
-SceneComponent="\"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.Tags.ComponentTags\" "
-Object="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" "
-PaperSpriteComponent=
+SceneComponent=
+ActorComponent=
+Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2].Vertices.Vertices[2]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2].Vertices.Vertices[2]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
+PaperSpriteComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object.Tags.ComponentTags\" "
+PrimitiveComponent=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
 StaticMeshComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2286,8 +2305,14 @@ TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 DeathMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Background.Background;
+RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
@@ -2296,7 +2321,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Heal.Heal;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/FullLevel_Map.FullLevel_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_4_TP.Tutorial_4_TP;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_3_TP.Tutorial_3_TP;
@@ -2306,8 +2330,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1.TutorialEnemy1;
 RecentlyPlaced=/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_2_TP1.Tutorial_2_TP1;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/ResetTutorial2.ResetTutorial2;
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial2_Ruins.Tutorial2_Ruins;
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial1_Ruins.Tutorial1_Ruins;
 
 [MessageLog]
 LastLogListing=PIE
