added a second level and a death screen that works as intended and a level select

--- a/GameDesign2/Config/DefaultEngine.ini
+++ b/GameDesign2/Config/DefaultEngine.ini
@@ -5,15 +5,16 @@ GameName=GameDesign2
 r.MobileHDR=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/2DSideScrollerBP/Maps/Tutorial1.Tutorial1
+EditorStartupMap=/Game/2DSideScrollerBP/Maps/StartMenu.StartMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/2DSideScrollerBP/Maps/Tutorial1.Tutorial1
+GameDefaultMap=/Game/2DSideScrollerBP/Maps/StartMenu.StartMenu
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
 GlobalDefaultServerGameMode=None
 ServerDefaultMap=None
+GameInstanceClass=/Game/2DSideScrollerBP/Blueprints/GI_2DGameInstance.GI_2DGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
