--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,11 +155,19 @@ ToolbarOpenBPClass.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/StartMenu
+LastLevel=/Game/2DSideScrollerBP/Maps/Level2
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/TileSet/Abduction_Tileset_TileSet.Abduction_Tileset_TileSet
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door.Level1Door
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Explosion.Explosion
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect.LevelSelect
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/GI_2DGameInstance.GI_2DGameInstance
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/StartMenu.StartMenu
+OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu.DeathMenu
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1088,38 +1096,40 @@ SequencerWidgets.TimeStamp=2022.11.02-13.12.00
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem2=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem3=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem5=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial3
-MRUItem7=/Game/2DSideScrollerBP/Maps/Level1
-MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem1=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem3=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem4=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem5=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial4
+MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial3
+MRUItem9=/Game/2DSideScrollerBP/Maps/Level1
+MRUItem10=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem11=/Game/2DSideScrollerBP/Maps/Tutorial
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem1=/Game/2DSideScroller/Textures/TileSet/Abduction_Tileset_TileSet
-MRUItem2=/Game/2DSideScroller/Textures/Tutorial1_Ruins
-MRUItem3=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/DeathPlane
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/Background
-MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem7=/Game/2DSideScrollerBP/Maps/Level1_Map
-MRUItem8=/Game/2DSideScroller/Textures/Level1_TileSet_Ruins
-MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial1_Ruins
-MRUItem10=/Game/2DSideScrollerBP/Maps/Level1_TileMap
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem1=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem4=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem5=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem6=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/GI_2DGameInstance
+MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem9=/Game/2DSideScroller/Textures/MenuTextures/Level1Menu
+MRUItem10=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
 MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem12=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem13=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem14=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem15=/Game/2DSideScrollerBP/Blueprints/Explosion
-MRUItem16=/Game/2DSideScroller/Textures/Explosion1
-MRUItem17=/Game/2DSideScroller/Textures/Explosion
-MRUItem18=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem19=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Explosion
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door
+MRUItem14=/Game/2DSideScrollerBP/Maps/Level2_Map
+MRUItem15=/Game/2DSideScroller/Textures/TileSet/Abduction_Tileset_TileSet
+MRUItem16=/Game/2DSideScroller/Textures/Tutorial1_Ruins
+MRUItem17=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
+MRUItem18=/Game/2DSideScrollerBP/Blueprints/DeathPlane
+MRUItem19=/Game/2DSideScrollerBP/Blueprints/Background
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2041,6 +2051,18 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+Level1Door_C.Tick=True
+Level1Door_C.Replication=True
+Level1Door_C.Rendering=True
+Level1Door_C.Collision=True
+Level1Door_C.Actor=True
+Level1Door_C.Input=True
+LevelSelect_C.Tick=True
+LevelSelect_C.Replication=True
+LevelSelect_C.Actor=True
+LevelSelect_C.Input=True
+K2Node_VariableSet.Events=True
+Level1Door_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2095,6 +2117,7 @@ PostProcessVolume.Actor=True
 /Game/2DSideScrollerBP/Maps/Tutorial1_Ruins.Tutorial1_Ruins=1
 /Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map=1
 /Game/2DSideScrollerBP/Blueprints/Background.Background=1
+/Game/2DSideScrollerBP/Maps/Tutorial1.Tutorial1:PersistentLevel.Tutorial1=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2102,7 +2125,7 @@ InstalledPlugins=XRVisualization
 [DetailCustomWidgetExpansion]
 CameraComponent=CameraComponent.PostProcess.Lens,
 CapsuleComponent=
-2DSideScrollerCharacter_C=
+2DSideScrollerCharacter_C=CameraComponent.PostProcess.Lens,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
 Breakable_Block_C=CameraComponent.PostProcess.Lens,
@@ -2200,8 +2223,9 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntim
 EnemyBoundaries_C=CameraComponent.PostProcess.Lens,
 FullLevel_TP_C=CameraComponent.PostProcess.Lens,
 Heal_C=CameraComponent.PostProcess.Lens,
-StartMenu_C=
+StartMenu_C=CameraComponent.PostProcess.Lens,
 DeathMenu_C=
+GI_2DGameInstance_C=
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2246,14 +2270,14 @@ PreserveScaleRatio=False
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 SceneComponent=
 ActorComponent=
-Object="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2].Vertices.Vertices[2]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
-PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2]\" \"Object.Sprite.PerTileData.PerTileData[11].CollisionData.Shapes.Shapes[2].Vertices.Vertices[2]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
+Object=
+PaperTileSet="\"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[0].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[1].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[2].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[3].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[4].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[5].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[6].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[7].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[8].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[9].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[10].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[12].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[13].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[14].CollisionData.Shapes.Shapes[0]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[15].CollisionData.Shapes.Shapes[0]\" "
 PaperSpriteComponent="\"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Tags.ComponentTags\" "
 PrimitiveComponent=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" \"Object.Sprite.KeyFrames.KeyFrames[0]\" \"Object.Sprite.KeyFrames.KeyFrames[1]\" "
-StaticMeshComponent=
-BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshComponent="\"Object.Tags.ComponentTags\" "
+BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
 ShapeComponent=
 ProjectileMovementComponent="\"Object.Velocity.Velocity\" "
 MovementComponent="\"Object.Velocity.Velocity\" "
@@ -2298,9 +2322,9 @@ PaperCharacter=
 Character=
 Pawn=
 2DSideScrollerCharacter_C=
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 DeathMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -2310,11 +2334,13 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door.Level1Door;
+RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Background.Background;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Heal.Heal;
@@ -2328,8 +2354,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial4_Ruins.Tutorial4_Ruins;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial3_Ruins.Tutorial3_Ruins;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/TutorialEnemy1.TutorialEnemy1;
 RecentlyPlaced=/Game/2DSideScroller/Animations/PC_Projectile.PC_Projectile;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_2_TP1.Tutorial_2_TP1;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/ResetTutorial2.ResetTutorial2;
 
 [MessageLog]
 LastLogListing=PIE
@@ -2499,6 +2523,7 @@ Advanced=False
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
 DeleteWidgetsInUse_Warning=False
+DeleteVariableInUse_Warning=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
