did some more stuff

--- a/GameDesign2/Saved/Config/Windows/Engine.ini
+++ b/GameDesign2/Saved/Config/Windows/Engine.ini
@@ -59,7 +59,7 @@ Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
 Paths=../../../Engine/Plugins/Runtime/Steam/SteamVR/Content
 
 [WindowsApplication.Accessibility]
-StickyKeysHotkey=True
+StickyKeysHotkey=False
 ToggleKeysHotkey=True
 FilterKeysHotkey=True
 StickyKeysConfirmation=True
