--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -65,7 +65,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=320,Y=160)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -93,14 +93,16 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=1910,Y=1006)
 LastExecutedLaunchDevice=WindowsNoEditor@CAIT-C86PPX2
 LastExecutedLaunchName=CAIT-C86PPX2
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
-MultipleInstancePositions=(X=320,Y=160)
+MultipleInstancePositions=(X=0,Y=0)
+NewWindowWidth=1910
+NewWindowHeight=1006
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -156,7 +158,7 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1035,8 +1037,8 @@ SequencerWidgets.TimeStamp=2021.08.31-15.24.27
 SequencerWidgets.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/SS_game
-MRUItem1=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem1=/Game/2DSideScrollerBP/Maps/SS_game
 MRUItem2=/Game/StarterContent/Maps/SS_game
 
 [DetailCategories]
@@ -1560,31 +1562,42 @@ MapBuildDataRegistry.Lighting=True
 2DSideScrollerExampleMap_C.Replication=True
 2DSideScrollerExampleMap_C.Actor=True
 2DSideScrollerExampleMap_C.Input=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Textures/1StartScreen
-MRUItem2=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
-MRUItem3=/Game/2DSideScrollerBP/Maps/SS_game
-MRUItem4=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem5=/Game/StarterContent/Maps/SS_game
-MRUItem6=/Game/2DSideScroller/Textures/ZStart_Screen
-MRUItem7=/Game/2DSideScroller/Sprites/Level1_TileMap1
-MRUItem8=/Game/2DSideScroller/Sprites/Level1_TileMap
-MRUItem9=/Game/2DSideScroller/Data/AnimationState
-MRUItem10=/Game/2DSideScroller/Sprites/Background_Sprite
-MRUItem11=/Game/2DSideScroller/Sprites/Level1_TileSet
-MRUItem12=/Game/2DSideScroller/animations/PC_shoot
-MRUItem13=/Game/2DSideScroller/animations/PC_run
-MRUItem14=/Game/2DSideScroller/animations/PC_hurt
-MRUItem15=/Game/2DSideScroller/animations/PC_idle
-MRUItem16=/Game/2DSideScroller/animations/PC_jump
-MRUItem17=/Game/2DSideScroller/animations/PC_projectile
-MRUItem18=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
-MRUItem19=/Game/2DSideScroller/Textures/4_Ramsey_Tileset
+MRUItem0=/Game/2DSideScroller/Sprites/Level2_TileMap
+MRUItem1=/Game/2DSideScroller/Sprites/Level1_TileMap1
+MRUItem2=/Game/2DSideScroller/Sprites/Level1_TileMap
+MRUItem3=/Game/2DSideScroller/Sprites/Level1_TileSet
+MRUItem4=/Game/2DSideScroller/Sprites/4_Ramsey_Tileset
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem6=/Game/2DSideScroller/Textures/1StartScreen
+MRUItem7=/Game/2DSideScrollerBP/Maps/SS_game
+MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem9=/Game/StarterContent/Maps/SS_game
+MRUItem10=/Game/2DSideScroller/Textures/ZStart_Screen
+MRUItem11=/Game/2DSideScroller/Data/AnimationState
+MRUItem12=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem13=/Game/2DSideScroller/animations/PC_shoot
+MRUItem14=/Game/2DSideScroller/animations/PC_run
+MRUItem15=/Game/2DSideScroller/animations/PC_hurt
+MRUItem16=/Game/2DSideScroller/animations/PC_idle
+MRUItem17=/Game/2DSideScroller/animations/PC_jump
+MRUItem18=/Game/2DSideScroller/animations/PC_projectile
+MRUItem19=/Game/2DSideScroller/Textures/4_Ramsey_CharacterComplete
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1609,6 +1622,7 @@ LastLogListing=LoadErrors
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap_BuiltData.2DSideScrollerExampleMap_BuiltData=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
 /Game/2DSideScrollerBP/Maps/SS_game.SS_game:PersistentLevel.SS_game=1
+/Game/2DSideScroller/Sprites/Level2_TileMap.Level2_TileMap=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
@@ -1671,7 +1685,7 @@ Value=1.000000
 PreserveScaleRatio=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/2DSideScroller/Sprites/Level1_TileMap1.Level1_TileMap1;
+RecentlyPlaced=/Game/2DSideScroller/Sprites/Level2_TileMap.Level2_TileMap;
 RecentlyPlaced=/Game/2DSideScroller/Sprites/Level1_TileMap.Level1_TileMap;
 
 [DetailMultiObjectNodeExpansion]
