--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,19 +155,12 @@ ToolbarOpenBPClass.CurrentViewType=0
 ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level2
+LastLevel=/Game/2DSideScrollerBP/Maps/Level3
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door.Level2Door
-OpenAssetsAtExit=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect.LevelSelect
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level3_Map.Level3_Map
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/BulletEnemy.BulletEnemy
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1098,8 +1091,8 @@ ExternalImagePicker.TimeStamp=2022.12.12-23.20.55
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level2
 MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
 MRUItem3=/Game/2DSideScrollerBP/Maps/LevelSelect
 MRUItem4=/Game/2DSideScrollerBP/Maps/DeathScreen
@@ -1112,26 +1105,26 @@ MRUItem10=/Game/2DSideScrollerBP/Maps/Level1
 MRUItem11=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem3=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem5=/Game/2DSideScrollerBP/Maps/Level3_Map
-MRUItem6=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem7=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem9=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door
-MRUItem12=/Game/2DSideScrollerBP/Maps/Level2_Map
-MRUItem13=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem14=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem15=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem16=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem17=/Game/2DSideScrollerBP/Blueprints/GI_2DGameInstance
-MRUItem18=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem19=/Game/2DSideScroller/Textures/MenuTextures/Level1Menu
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem2=/Game/2DSideScrollerBP/Maps/Level3_Map
+MRUItem3=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem4=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
+MRUItem7=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem8=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem10=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door
+MRUItem13=/Game/2DSideScrollerBP/Maps/Level2_Map
+MRUItem14=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem15=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem16=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem17=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
+MRUItem18=/Game/2DSideScrollerBP/Blueprints/GI_2DGameInstance
+MRUItem19=/Game/2DSideScrollerBP/Maps/Tutorial1
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2072,6 +2065,13 @@ Level2Door_C.Collision=True
 Level2Door_C.Actor=True
 Level2Door_C.Input=True
 Level2Door_C.TransformCommon=True
+Level3Door_C.Tick=True
+Level3Door_C.Replication=True
+Level3Door_C.Rendering=True
+Level3Door_C.Collision=True
+Level3Door_C.Actor=True
+Level3Door_C.Input=True
+Level3Door_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -2237,6 +2237,7 @@ StartMenu_C=
 DeathMenu_C=
 GI_2DGameInstance_C=
 Background_C=CameraComponent.PostProcess.Lens,
+Level3Door_C=CameraComponent.PostProcess.Lens,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2346,6 +2347,7 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door.Level3Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter.Orb_Shooter;
@@ -2365,7 +2367,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Maps/FullLevel_Map.FullLevel_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_4_TP.Tutorial_4_TP;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_3_TP.Tutorial_3_TP;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial4_Ruins.Tutorial4_Ruins;
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial3_Ruins.Tutorial3_Ruins;
 
 [MessageLog]
 LastLogListing=PIE
