did some more changes

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -152,15 +152,17 @@ AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.PluginFilters=
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/2DSideScrollerBP/Maps/Level3
+LastLevel=/Game/2DSideScrollerBP/Maps/Level4
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level3_Map.Level3_Map
 OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door.Level3Door
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Maps/Level4_Map.Level4_Map
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1091,40 +1093,40 @@ ExternalImagePicker.TimeStamp=2022.12.12-23.20.55
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem1=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem2=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem3=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem4=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem5=/Game/2DSideScrollerBP/Maps/Tutorial1
-MRUItem6=/Game/2DSideScrollerBP/Maps/FullLevel
-MRUItem7=/Game/2DSideScrollerBP/Maps/Tutorial2
-MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial4
-MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial3
-MRUItem10=/Game/2DSideScrollerBP/Maps/Level1
-MRUItem11=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem2=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem3=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem4=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem5=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem6=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem7=/Game/2DSideScrollerBP/Maps/FullLevel
+MRUItem8=/Game/2DSideScrollerBP/Maps/Tutorial2
+MRUItem9=/Game/2DSideScrollerBP/Maps/Tutorial4
+MRUItem10=/Game/2DSideScrollerBP/Maps/Tutorial3
+MRUItem11=/Game/2DSideScrollerBP/Maps/Level1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door
-MRUItem1=/Game/2DSideScrollerBP/Blueprints/Enemy
-MRUItem2=/Game/2DSideScrollerBP/Maps/Level3_Map
-MRUItem3=/Game/2DSideScrollerBP/Maps/Level3
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
-MRUItem5=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem6=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
-MRUItem7=/Game/2DSideScrollerBP/Maps/Level2
-MRUItem8=/Game/2DSideScrollerBP/Maps/StartMenu
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
-MRUItem10=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door
-MRUItem13=/Game/2DSideScrollerBP/Maps/Level2_Map
-MRUItem14=/Game/2DSideScrollerBP/Maps/LevelSelect
-MRUItem15=/Game/2DSideScrollerBP/Maps/DeathScreen
-MRUItem16=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
-MRUItem17=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
-MRUItem18=/Game/2DSideScrollerBP/Blueprints/GI_2DGameInstance
-MRUItem19=/Game/2DSideScrollerBP/Maps/Tutorial1
+MRUItem0=/Game/2DSideScrollerBP/Maps/Level4_Map
+MRUItem1=/Game/2DSideScrollerBP/Maps/Level4
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/Enemy
+MRUItem4=/Game/2DSideScrollerBP/Maps/Level3_Map
+MRUItem5=/Game/2DSideScrollerBP/Maps/Level3
+MRUItem6=/Game/2DSideScrollerBP/Blueprints/BulletEnemy
+MRUItem7=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries
+MRUItem9=/Game/2DSideScrollerBP/Maps/Level2
+MRUItem10=/Game/2DSideScrollerBP/Maps/StartMenu
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/Orb_Shooter
+MRUItem12=/Game/2DSideScroller/Textures/MenuTextures/LevelSelect
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door
+MRUItem14=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door
+MRUItem15=/Game/2DSideScrollerBP/Maps/Level2_Map
+MRUItem16=/Game/2DSideScrollerBP/Maps/LevelSelect
+MRUItem17=/Game/2DSideScrollerBP/Maps/DeathScreen
+MRUItem18=/Game/2DSideScroller/Textures/MenuTextures/DeathMenu
+MRUItem19=/Game/2DSideScroller/Textures/MenuTextures/StartMenu
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -2237,7 +2239,8 @@ StartMenu_C=
 DeathMenu_C=
 GI_2DGameInstance_C=
 Background_C=CameraComponent.PostProcess.Lens,
-Level3Door_C=CameraComponent.PostProcess.Lens,
+Level3Door_C=
+DeathPlane_C=CameraComponent.PostProcess.Lens,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2347,6 +2350,8 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
+RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level4_Map.Level4_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level3Door.Level3Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/EnemyBoundaries.EnemyBoundaries;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Enemy.Enemy;
@@ -2356,7 +2361,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level2Door.Level2Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Doors/Level1Door.Level1Door;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level2_Map.Level2_Map;
-RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/DeathPlane.DeathPlane;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Background.Background;
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Level1_Map.Level1_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/FullLevel_TP.FullLevel_TP;
@@ -2366,7 +2370,6 @@ RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block
 RecentlyPlaced=/Game/2DSideScrollerBP/Maps/FullLevel_Map.FullLevel_Map;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_4_TP.Tutorial_4_TP;
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Tutorial_3_TP.Tutorial_3_TP;
-RecentlyPlaced=/Game/2DSideScrollerBP/Maps/Tutorial4_Ruins.Tutorial4_Ruins;
 
 [MessageLog]
 LastLogListing=PIE
